<resources>
    <string name="app_name">Medi App</string>
    <string name="medicare">MediCare</string>
    <string name="plus">Plus</string>
    <string name="slogan">Your Health, Our Priority</string>
    <string name="view">View</string>
    <string name="subscribe">Subscribe</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="good_health">Good Health and Well-Being</string>
    <string name="sign_up">Sign-up</string>
    <string name="email">E-mail</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="next">Next</string>
    <string name="registe">Registe</string>
    <string name="r">r</string>
    <string name="ot">OT</string>
    <string name="p_caps">P</string>
    <string name="otp_instruction">Please enter your verification code\nfor verify your mobile no.</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="how_can_help">How can we help you today?</string>
    <string name="doctor_appointment">Doctor Appointment</string>
    <string name="book_consultation">Book your consultation</string>
    <string name="manage_medications">Manage your medications</string>
    <string name="my_medicines">My Medicines</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="medicine_list">Medicine List</string>
    <string name="medicine_manager">Medicine Manager</string>
    <string name="add_new_medicine">Add New Medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="time_label">Time</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="penadol">Penadol</string>
    <string name="time_placeholder">-- : -- : --</string>
    <string name="time_8am">08:00 AM</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="date_label">Date</string>
    <string name="date_placeholder">YYYY-MM-DD</string>
    <string name="enter_medicine_name">Enter medicine name</string>
    <string name="add_plus">+ Add</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="dr_sanka">Dr. Sanka Perera</string>
    <string name="dr_kameesha">Dr. kameesha Weern</string>
    <string name="dr_romesh">Dr. Romesh Suranga</string>
    <string name="dr_rawanthi">Dr. Rawanthi</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="general_physician">General Physician</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="date_hint">mm/dd/yyyy</string>
    <string name="time_09am">09.00 AM</string>
    <string name="time_10am">10.00 AM</string>
    <string name="time_11am">11.00 AM</string>
    <string name="time_02pm">02.00 PM</string>
    <string name="time_03pm">03.00 PM</string>
    <string name="time_04pm">04.00 PM</string>
    <string name="appointment_success">Your Appointment\nis Successfully!</string>
</resources>